# crosslayer-features

./: .env  .gitignore  CROSSCODER_VIS_README.md  Crosscoder_model_diff.ipynb  EXAMPLE.html  README.md  crosscoder_dashboard.html  crosscoder_dashboard_new.html  crosscoder_sae_vis_dashboard.html  debug_checkpoint.py  download_data.py  example_usage.py  format.txt  generate_crosscoder_dashboard.py  generate_crosscoder_vis.py  generate_crosscoder_vis_simple.py  generate_dashboard.py  generate_vis.py  main.py  my_job.sh  plan.md  pyproject.toml  slurm-1406295.out  slurm-1406462.out  test.py  test_dashboard.html  test_endoftext_filter.py  test_imports.py  testfile.py  vistesting.ipynb
crosscoder/: MULTIGPU_README.md  crosscoder.py  crosscoder.py.backup  launch_multigpu.sh  multigpu_train.py  multigpucrosscoder.py  new-crosscoder.py  newcrosscoder.py  simple_train.py  sophia.py  sweep_config.yaml  test.py  train.py
crosscoder-vis/: crosscoder_dashboard.html  generate_crosscoder_dashboard.py  init.js  style.css
crosscoder-vis/sae_vis/: data_fetching_fns.py  data_storing_fns.py  init.js  model_fns.py  utils_fns.py
sae_vis/sae_vis/: __init__.py  crosslayer_vis_fns.py  data_config_classes.py  data_fetching_fns.py  data_storing_fns.py  init.js  init_new.js  init_simple.js  model_fns.py  model_utils.py  style.css  style_modern.css  style_new.css  style_simple.css  utils_fns.py
vis/: dashboard.py  sae_dashboard.py
wandb/: latest-run
wandb/run-20251011_134648-pc2va0jj/: run-pc2va0jj.wandb
wandb/run-20251011_135512-07xw6vvz/: run-07xw6vvz.wandb
wandb/run-20251011_140622-8digo9r7/: run-8digo9r7.wandb
wandb/run-20251011_141217-y7osqdrq/: run-y7osqdrq.wandb
wandb/run-20251011_141810-9ukun4v2/: run-9ukun4v2.wandb
wandb/run-20251011_144905-upfsrpkv/: run-upfsrpkv.wandb
wandb/run-20251011_150439-o9mpphyp/: run-o9mpphyp.wandb
wandb/run-20251011_150614-ibd9wqi6/: run-ibd9wqi6.wandb
wandb/run-20251011_192240-zoclo69j/: run-zoclo69j.wandb
(+150 files in other folders)
