[project]
name = "crosslayer-features"
version = "0.1.0"
description = "Development repo for crosslayer feature research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "circuitsvis>=1.43.3",
    "dataclasses-json>=0.6.7",
    "datasets>=2.0.0,<3.0.0",
    "eindex>=0.1.0",
    "einops>=0.7.0",
    "frozendict>=2.4.6",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "nnsight>=0.4.8",
    "path>=17.1.0",
    "plotly>=6.2.0",
    "sae-vis",
    "tabulate>=0.9.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "wandb>=0.20.1",
]

[tool.uv.sources]
sae-vis = { git = "https://github.com/ckkissane/sae_vis.git", rev = "crosscoder-vis" }
