[project]
name = "crosslayer-features"
version = "0.1.0"
description = "Development repo for crosslayer feature research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "circuitsvis>=1.43.3",
    "datasets>=2.0.0,<3.0.0",
    "ipykernel>=6.29.5",
    "nnsight>=0.4.8",
    "path>=17.1.0",
    "plotly>=6.2.0",
    "sae-vis",
    "scipy>=1.16.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "wandb>=0.20.1",
]

[tool.uv.sources]
sae-vis = { git = "https://github.com/ckkissane/sae_vis.git", rev = "crosscoder-vis" }
